<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/icon_home"
        android:title="@string/action_home" />
    <item
        android:id="@+id/action_chart"
        android:icon="@drawable/icon_chart"
        android:title="@string/action_chart" />

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/icon_setting"
        android:title="@string/action_setting" />

    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/camera_icon_capture"
        android:title="@string/action_camera" />

    <item
        android:id="@+id/action_voice"
        android:icon="@drawable/voice_icon_mic"
        android:title="@string/action_voice" />
</menu>